# alcounting_bot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml  pylint.yml  python-package.yml  validate_commits.yml
bot/: __main__.py
bot/database/: __init__.py  database.py  order.py  product.py  user.py
bot/handlers/: __init__.py  callbacks.py  cmd.py  error_handler.py  help.py  menu.py  start.py
bot/users/: __init__.py  admin.py  barman.py  customer.py
src/: main.py
src/modules/: admin.py  barman.py  customer.py  database.py  handlers.py  order.py
startup_scripts/: linux.sh  unix.sh
